# nipuna

./: .gitignore  README.md  pyproject.toml
nipuna/: Nipuna.py  cli.py  main.py
nipuna/backend/: api_handler.py
nipuna/backend/api/: api_handler.py
nipuna/backend/utils/: config_handler.py  model_handler.py
nipuna/cli/: cli.py
nipuna/ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
nipuna/ui/src/: App.svelte  app.css
nipuna/workflow/: chaining.py
sample/: sample.yaml
sample1/: sample1.yaml
src/nipuna/: Nipuna.py  __init__.py  main.py  sample.yaml
src/nipuna/backend/: cli.py  handler.py
src/nipuna/backend/utils/: config_handler.py  data_handler.py
src/nipuna/scripts/: frontend_build.py
src/nipuna/ui/: package.json
src/nipuna/utils/: cli.py
