[project]
name = "nipuna"
version = "0.1.0"
description = "Expert AI Agents"
authors = [
    {name = "JayReddy",email = "nipunalabs@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"

requires-python = "<4.0,>=3.9"

dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "transformers (>=4.48.2,<5.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "mlflow (>=2.20.2,<3.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "langchain (>=0.3.18,<0.4.0)"
    ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [{ include = "nipuna", from="nipuna" }]

exclude = [
    "tests/",
    "ui/dist/",
    "ui/node_modules/",
    "ui/.vscode/"
]

[tool.poetry.scripts]
nipuna = "nipuna.cli:nipuna"